--- a/JS/Html_Game/index.html
+++ b/JS/Html_Game/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamespace</title>
+    <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-    <canvas></canvas>
+   <div class="container">
+    <div class="game">
+        <canvas></canvas>
+        <h1>My Game</h1>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Dolorum hic suscipit placeat iste adipisci quos vel quae!
+            Ipsum, reiciendis nulla soluta ullam,
+            accusamus corrupti quidem fuga id praesentium, rerum facere.
+        </p>
+    </div>
+   </div>
     <script src="index.js"></script>
 </body>
 </html>
